2001-11-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/FileSystem.3: 
	* doc/Access.3: Minor correction, and more explanation about why
	Tcl_FSStat is better than either stat or Tcl_Stat.

	* generic/tclIOUtil.c (Tcl_Stat): Whoops!  st_ino is an unsigned
	field...

2001-11-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclExecute.c: Removed duplicate declaration of LLONG_MIN
	and LLONG_MAX which are now in tclPort.h instead.

	* generic/tcl.h: Added extra forward declaration for picky
	compilers.

	* generic/tclFCmd.c (FileCopyRename): Fixed comment.

	* generic/tcl.decls (Tcl_Stat): 
	* generic/tclIOUtil.c (Tcl_Stat): Reworked so as to use old style
	'struct stat' declaration for improved backward-compatability.

2001-10-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* win/tclWinMtherr.c (_matherr): Better handling of selected
	Borland C++ math errors, from hgiese@ratiosoft.com

	* generic/tclIndexObj.c (STRING_AT): Fixed so that it builds with
	SunPro CC on Solaris, which refuses to perform address arithmetic
	on void*, despite the fact that that is necessary to get the
	correct behaviour on Crays...

	* generic/tclTestObj.c (TestindexobjCmd): Fixed assumptions
	relating to internal representation of index objects.

2001-10-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/GetIndex.3: Added note that table of strings must be ASCII
	strings, which they seem to be in all currrent uses.  Things break
	horribly otherwise since the matching code is not UTF-8 aware.
	* generic/tclIndexObj.c: Assorted changes to make
	Tcl_GetIndexFromObj() more likely to work on platforms like a Cray
	PVP following feedback from Len Makin <len@hpc.csiro.au>

2001-09-24  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tools/encoding/cp1252.txt: File was missing part of the encoding
	[euro, ZCaron and zcaron].

	* doc/OpenFileChnl.3: Add docs for Tcl_OutputBuffered; remove some
	old changebars.

2001-09-21  Jeff Hobbs  <jeffh@ActiveState.com>
